Text object disappears when Fill Mode set to None #59273

Closed
opened 2018-12-12 23:22:43 +01:00 by Zachary · 10 comments

System Information
Windows 10 x64
GTX 950M

Blender Version
Broken:
Date: 2018-12-11
Hash: 70d38a996e
Branch: blender 2.8 (Beta)

Works:
Date: 2017-9-11
Hash: 5bc8ac9
Branch: blender 2.79 (Official Release)

Short description of error
Setting text object Fill Mode to None makes it disappear. In 2.79 it would make a outline of the text when you select that option.

2.80
text_object_2_80.jpg

2.79
text_object_2_79.jpg

Exact steps for others to reproduce the error
1: Add text object
2: Go to object data in properties
3: Select None for Fill Method under Shape panel

**System Information** Windows 10 x64 GTX 950M **Blender Version** Broken: Date: 2018-12-11 Hash: 70d38a996eb Branch: blender 2.8 (Beta) Works: Date: 2017-9-11 Hash: 5bc8ac9 Branch: blender 2.79 (Official Release) **Short description of error** Setting text object Fill Mode to None makes it disappear. In 2.79 it would make a outline of the text when you select that option. 2.80 ![text_object_2_80.jpg](https://archive.blender.org/developer/F5946923/text_object_2_80.jpg) 2.79 ![text_object_2_79.jpg](https://archive.blender.org/developer/F5946929/text_object_2_79.jpg) **Exact steps for others to reproduce the error** 1: Add text object 2: Go to object data in properties 3: Select None for Fill Method under Shape panel
Author

Added subscriber: @AFWS

Added subscriber: @AFWS

Added subscriber: @zeauro

Added subscriber: @zeauro

Confirmed on 21523b5 under ubuntu 16.04 64bits

User may want to read/write an extruded text in ortho view or convert such text into mesh edges without face fillling.
So, it is better to restore 2.79 behavior.

Confirmed on 21523b5 under ubuntu 16.04 64bits User may want to read/write an extruded text in ortho view or convert such text into mesh edges without face fillling. So, it is better to restore 2.79 behavior.
Jacques Lucke self-assigned this 2018-12-19 14:58:48 +01:00
Member
[D4103](https://archive.blender.org/developer/D4103)

This issue was referenced by be98fcc6e2

This issue was referenced by be98fcc6e27e5e42aaf515d238ba6a1297f751a1
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @thsampa

Added subscriber: @thsampa

Has this been solved? I have the same problem.

Blender v2.82a (2.82a 2020-03-12) - MacOS Mojave

Has this been solved? I have the same problem. Blender v2.82a (2.82a 2020-03-12) - MacOS Mojave
Member

Well, maybe something else is causing this now. Please create a new report for the issue.

Well, maybe something else is causing this now. Please create a new report for the issue.

In #59273#914913, @JacquesLucke wrote:
Well, maybe something else is causing this now. Please create a new report for the issue.

Roger that.

> In #59273#914913, @JacquesLucke wrote: > Well, maybe something else is causing this now. Please create a new report for the issue. Roger that.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59273
No description provided.