Fix T59273: Text object disappears when Fill Mode is set to None

Reviewers: fclem

Differential Revision: https://developer.blender.org/D4103